public/stylesheets/style.css
body{
  padding-top: 50px;
}

.dualContainer{
  overflow: hidden;
}

.dualImage{
  max-width: 100%;
  overflow: hidden;
}

footer{
  font-style: italic;
  font-size: smaller;
}

.imageContainer{
  overflow: hidden;
}

.imageFrame{
  width: 100%;
  height: 50vh;
  max-height: 500px;
  display: flex;
  overflow: hidden;
}



nav ul li{
  display: inline;
}

.quadContainer{
  max-width: 25%;
}

.quadImage{
  max-width: 100%;
  overflow: hidden;
}

.rightContainer{
  width: 40%;
  max-width:40%;
}

section {
  font-family: 'Droid Sans', sans-serif;
}

#travelMap,#nudgeImage{
  max-width: 100%;
  overflow: hidden;
}

#welcomeContainerLeft{
  max-width: 65%;
  width:65%;
}

#welcomeContainerRight{
  width: 35%;
  max-width:35%;
}

